# pathfinder-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_wasm.sh  download_deps.py
demo/common/: CMakeLists.txt  app.cpp  app.h  blit.cpp  blit.h  texture_rect.cpp  texture_rect.h
demo/native/: CMakeLists.txt  main.cpp
demo/web/: CMakeLists.txt  How to compile.md  index.html  main.cpp  serve.ps1
pathfinder/: CMakeLists.txt  config.h  prelude.h
pathfinder/common/: color.cpp  color.h  f32x4.h  global_macros.h  i32x4.h  io.cpp  io.h  logger.h  timestamp.cpp  timestamp.h
pathfinder/common/math/: basic.h  mat2.h  mat3.h  mat4.h  rect.h  transform2.cpp  transform2.h  unit_vector.h  vec2.h  vec3.h
pathfinder/core/: canvas.cpp  canvas.h  dash.h  path2d.cpp  path2d.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_builder.cpp  scene_builder.h  stroke.cpp  stroke.h  svg.cpp  svg.h
pathfinder/core/d3d11/: gpu_data.cpp  gpu_data.h  renderer.cpp  renderer.h  scene_builder.cpp  scene_builder.h
pathfinder/core/d3d9/: object_builder.cpp  object_builder.h  renderer.cpp  renderer.h  scene_builder.cpp  scene_builder.h  tiler.cpp  tiler.h
pathfinder/core/data/: built_path.cpp  built_path.h  contour.cpp  contour.h  data.h  dense_tile_map.h  line_segment.cpp  line_segment.h  path.cpp  path.h  segment.h
pathfinder/core/paint/: effects.h  gradient.cpp  gradient.h  paint.cpp  paint.h  palette.cpp  palette.h  pattern.cpp  pattern.h  texture_allocator.cpp  texture_allocator.h
pathfinder/gpu/: README.md  base.h  buffer.h  command_encoder.cpp  command_encoder.h  compute_pipeline.h  descriptor_set.h  device.cpp  device.h  fence.h  framebuffer.h  offscreen_context.cpp  offscreen_context.h  queue.h  render_api.h  render_pass.h  render_pipeline.h  shader.cpp  shader.h  shader_module.h  shader_translator.cpp  shader_translator.h  swap_chain.h  texture.h  window.cpp  window.h  window_builder.cpp  window_builder.h
pathfinder/gpu/gl/: base.h  buffer.cpp  buffer.h  command_encoder.cpp  command_encoder.h  compute_pipeline.h  debug_marker.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  program.cpp  program.h  queue.h  render_pass.h  render_pipeline.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  window.cpp  window.h  window_builder.cpp  window_builder.h
pathfinder/gpu/mtl/: base.h  buffer.h  buffer.mm  command_encoder.h  command_encoder.mm  compute_pipeline.h  device.h  device.mm  framebuffer.h  offscreen_context.h  offscreen_context.mm  queue.h  queue.mm  render_pass.h  render_pass.mm  render_pipeline.h  sampler.h  shader_module.h  swap_chain.h  swap_chain.mm  texture.h  texture.mm  window.h  window.mm  window_builder.h  window_builder.mm
pathfinder/gpu/vk/: base.h  buffer.cpp  buffer.h  command_encoder.cpp  command_encoder.h  compute_pipeline.h  debug_marker.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  render_pipeline.h  shader_module.h  swap_chain.cpp  swap_chain.h  texture.cpp  texture.h  window.cpp  window.h  window_builder.cpp  window_builder.h
pathfinder/gpu_mem/: allocator.cpp  allocator.h
pathfinder/shaders/: blit.frag  blit.vert  compile_and_convert.ps1  compile_and_convert.sh  convert_files_to_header.py
pathfinder/shaders/d3d11/: bin.comp  bound.comp  dice.comp  fill.comp  propagate.comp  sort.comp  tile.comp
pathfinder/shaders/d3d9/: fill.frag  fill.vert  tile.frag  tile.vert  tile_clip_combine.frag  tile_clip_combine.vert  tile_clip_copy.frag  tile_clip_copy.vert
pathfinder/utils/: blit.cpp  blit.h
shader_generator/: CMakeLists.txt  README.md
shader_generator/src/: generator.cpp  generator.h  main.cpp
src/: CMakeLists.txt  pathfinder.h
src/common/: color.cpp  color.h  f32x4.h  global_macros.h  i32x4.h  io.cpp  io.h  logger.h  timestamp.cpp  timestamp.h
src/common/math/: basic.h  mat2.h  mat2x2.h  mat4.h  mat4x4.h  quaternion.cpp  quaternion.h  rect.h  transform2.cpp  transform2.h  unit_vector.cpp  unit_vector.h  vec2.h  vec3.h
src/core/: canvas.cpp  canvas.h  dash.cpp  dash.h  effects.h  gradient.cpp  gradient.h  paint.cpp  paint.h  palette.cpp  palette.h  path2d.cpp  pattern.cpp  pattern.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_builder.cpp  scene_builder.h  stroke.cpp  stroke.h  svg.cpp  svg.h
src/core/d3d11/: data.h  gpu_data.cpp  gpu_data.h  renderer.cpp  renderer.h  scene_builder.cpp  scene_builder.h
src/core/d3d9/: object_builder.cpp  object_builder.h  renderer.cpp  renderer.h  scene_builder.cpp  scene_builder.h  tiler.cpp  tiler.h
src/core/d3dx/: canvas.cpp  canvas.h  dash.cpp  dash.h  effects.h  gradient.h  paint.cpp  paint.h  pattern.h  renderer.cpp  scene.h  (+4 more)
src/gpu/: README.md  base.h  buffer.h  command_buffer.cpp  command_buffer.h  command_encoder.cpp  command_encoder.h  compute_pipeline.h  data.h  descriptor_set.h  device.h  driver.h  framebuffer.h  platform.h  queue.h  render_pass.h  render_pipeline.h  swap_chain.h  texture.h  vertex_input.h  window.cpp  window.h  window_builder.cpp  window_builder.h
src/gpu_mem/: allocator.cpp  allocator.h  texture_allocator.cpp  texture_allocator.h
src/include/: pathfinder.h
src/render/: allocator.cpp  allocator.h  texture_allocator.cpp
src/rendering/: base.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  compute_pipeline.cpp  compute_pipeline.h  compute_program.cpp  compute_program.h  data.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  device_gl.cpp  device_gl.h  framebuffer.cpp  framebuffer.h  pipeline.h  platform.h  program.cpp  program.h  raster_program.cpp  raster_program.h  render_pass.h  render_pipeline.cpp  render_pipeline.h  texture.cpp  texture.h  validation.h  vertex_input.cpp  vertex_input.h  viewport.cpp  viewport.h
src/scenes/: node.h
src/shaders/: blit.frag  blit.vert  blit.vert.spv  blit_frag.spv  compile.ps1  compile_and_convert.ps1  convert_files_to_header.py  minifier.py  minify.ps1
(+375 files in other folders)
